--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -8,11 +8,13 @@ colorlog==6.6.0
 csvw==2.0.0
 gitdb==4.0.9
 greenlet==1.1.2
+html5lib==1.1
 idna==3.3
 iniconfig==1.1.1
 isodate==0.6.1
--e git+https://github.com/martino-vic/gerstnerhungarian.git@678a9ab8ce4361f589572429515cb3e3ba731f33#egg=lexibank_gerstnerhungarian
+-e git+https://github.com/martino-vic/gerstnerhungarian.git@dc721a9b8a1b7217c8a122681286c951a799b7fd#egg=lexibank_gerstnerhungarian
 lingpy==2.6.9
+lxml==4.8.0
 Markdown==3.3.6
 networkx==2.6.3
 newick==1.3.2
@@ -35,6 +37,7 @@ python-dateutil==2.8.2
 regex==2022.1.18
 requests==2.27.1
 rfc3986==1.5.0
+scipy==1.8.0
 segments==2.2.0
 six==1.16.0
 smmap==5.0.0
@@ -45,6 +48,7 @@ termcolor==1.1.0
 tqdm==4.62.3
 uritemplate==4.1.1
 urllib3==1.26.8
+webencodings==0.5.1
 xlrd==2.0.1
 zenodoclient==0.4.1
 zipp==3.7.0
